--- a/admin/Cargo.toml
+++ b/admin/Cargo.toml
@@ -12,6 +12,13 @@ comn = { path = "../comn" }
 
 # networking
 tungstenite = "0.9.1"
+crossbeam-channel = "0.3.8"
 
 # util
 pretty_env_logger = "0.3.1"
+log = "0.4.8"
+
+# ecs
+specs-derive = "0.4.0"
+fixedstep = "0.3.0"
+
